apps/facility-client/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: facility-client
spec:
  tls:
    - hosts:
        - facility-client-staging.example.com
      secretName: facility-client-staging-tls
  rules:
    - host: facility-client-staging.example.com
